[gd_scene load_steps=5 format=3 uid="uid://6g6bk00bxgkd"]

[ext_resource type="Script" path="res://scenes/Quiz Scene.gd" id="1_7xsvb"]
[ext_resource type="Texture2D" uid="uid://b245mgrhtealb" path="res://Green.png" id="2_exwa4"]

[sub_resource type="ViewportTexture" id="ViewportTexture_vo2xx"]

[sub_resource type="LabelSettings" id="LabelSettings_srtpd"]
font_size = 50
outline_size = 10
outline_color = Color(0.517184, 0.517185, 0.517184, 1)

[node name="Question1" type="Node"]
script = ExtResource("1_7xsvb")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_exwa4")

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(0.231746, 0.693518, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -381.0
offset_top = -217.0
offset_right = 381.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_vo2xx")

[node name="Right" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -301.0
offset_bottom = -254.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "How old are you?"

[node name="wrong" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -301.0
offset_bottom = -254.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "what old are you?"

[node name="wrong2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -301.0
offset_bottom = -254.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="wrong3" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -301.0
offset_bottom = -254.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "When old are you?"

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -123.0
offset_right = 20.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
text = "คุณอายุเท่าไหร่"
label_settings = SubResource("LabelSettings_srtpd")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="wrong" to="." method="_on_wrong_pressed"]
[connection signal="pressed" from="wrong2" to="." method="_on_wrong_2_pressed"]
[connection signal="pressed" from="wrong3" to="." method="_on_wrong_3_pressed"]
